syntax = "proto3";

package usermgmt;

option go_package = "./usermgmt";

service UserManagement {
  rpc CreateNewUser (NewUserRequest) returns (NewUserResponse) {}
}

message NewUserRequest {
  string user_id=1;
  string name = 2;
  int32 age = 3;
}

message NewUserResponse {
  string user_id=1;
}
